<resources>
    <string name="app_name">cine</string>
    <string name="correo">correo</string>
    <string name="contrasenia">contraseña</string>
    <string name="usuario">Usuario</string>
    <string name="contrasenia2">Reingrese Contraseña</string>
    <string name="btningresar">ingresar</string>
    <string name="btnregistra">registrar</string>
    <string name="registrate">Crear Cuenta</string>
    <string name="btnantay">Cine Antay</string>
    <string name="btnplanet">Cine Planet</string>
    <string name="menu2">entradas</string>
    <string name="menu1">inicio</string>
    <string name="abrir_drawer">Drawer abierto</string>
    <string name="cerrar_drawer">Drawer crerrado</string>
    <string name="recuerdame">recuerdame</string>
    <string name="btncompra">grannt</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>