<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cine_5_e1585960007845" />

    <EditText
        android:id="@+id/correo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="302dp"
        android:width="300dp"
        android:ems="10"
        android:hint="@string/correo"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/contrasenia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="23dp"
        android:width="300dp"
        android:ems="10"
        android:hint="@string/contrasenia"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/correo"
        app:layout_constraintTop_toBottomOf="@+id/correo" />

    <Button
        android:id="@+id/button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="45dp"
        android:width="300dp"
        android:onClick="login"
        android:text="@string/btningresar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cbrecuerdame" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:clickable="true"
        android:onClick="crearCuenta"
        android:text="@string/registrate"
        app:layout_constraintBottom_toTopOf="@+id/button8"
        app:layout_constraintStart_toEndOf="@+id/button8" />

    <CheckBox
        android:id="@+id/cbrecuerdame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:layout_marginTop="44dp"
        android:text="@string/recuerdame"
        app:layout_constraintStart_toStartOf="@+id/contrasenia"
        app:layout_constraintTop_toTopOf="@+id/contrasenia" />

    <Button
        android:id="@+id/button8"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="34dp"
        android:layout_marginBottom="35dp"
        android:onClick="Invitado"
        android:text="invitado"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>